erDiagram
    TENANTS ||--o{ USERS : "has"
    TENANTS ||--o{ FOLDERS : "owns"
    TENANTS ||--o{ ROLES : "defines"
    
    ROLES ||--o{ USERS : "assigned to"
    
    FOLDERS ||--o{ FOLDERS : "parent_id (Recursive)"
    FOLDERS ||--o{ DOCUMENTS : "contains"
    
    DOCUMENTS ||--o{ DOCUMENT_VERSIONS : "keeps history"
    DOCUMENTS ||--o{ AUDIT_LOGS : "generates"
    
    USERS ||--o{ AUDIT_LOGS : "performs action"

    TENANTS {
        uuid id PK
        string name
        string invite_code
    }
    USERS {
        uuid id PK
        string email
        uuid tenant_id FK
        uuid role_id FK
    }
    DOCUMENTS {
        uuid id PK
        string title
        text content
        uuid folder_id FK
        uuid tenant_id FK
    }
